# Api_FastAPI

./: pyproject.toml  schema.py  test.py
